src/test/ui/compile-fail-migration/import-crate-var.stderr
warning: `$crate` may not be imported
  --> $DIR/import-crate-var.rs:22:5
   |
LL |     m!();
   |     ^^^^^
   |
   = note: `use $crate;` was erroneously allowed and will become a hard error in a future release
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: compilation successful
  --> $DIR/import-crate-var.rs:21:1
   |
LL | / fn main() {
LL | |     m!();
LL | | }
   | |_^

error: aborting due to previous error

